--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
     "date-fns": "^3.3.1",
+    "embla-carousel-react": "^8.0.0",
     "input-otp": "^1.0.1",
     "lucide-react": "^0.323.0",
     "next": "14.1.0",
