--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "tree": "node scripts/tree.js"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
@@ -29,5 +30,6 @@
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
-  }
+  },
+  "type": "module"
 }
