update: add feature/update-hero-background to disabled deployments in vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,7 @@
   "git": {
     "deploymentEnabled": {
       "main": true,
+      "feature/update-hero-background": false,
       "other-branch-name": false,
       "another-branch-name": false
     }
