--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,7 @@
 {
   "git": {
     "deploymentEnabled": {
-      "main": true,
-      "feature/update-hero-background": false,
-      "other-branch-name": false,
-      "another-branch-name": false
+      "main": true
     }
   }
 }
