--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,5 @@
 {
-  "git": {
-    "deploymentEnabled": {
-      "main": true
-    }
-  }
+  "buildCommand": "next build",
+  "devCommand": "next dev",
+  "outputDirectory": ".next"
 }
