--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "tree": "node scripts/tree.js"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.2",
