--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.10.2",
+    "lucide-react": "^0.302.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
