--- a/.env.local.example
+++ b/.env.local.example
@@ -1,8 +1,10 @@
-# Google Analytics 4 Measurement ID
-NEXT_PUBLIC_GA_MEASUREMENT_ID=G-XXXXXXXXXX
+# Database URL for MongoDB
+# Ensure you're using the same MongoDB instance as your main application
+DATABASE_URL="mongodb+srv://<username>:<password>@<cluster>.mongodb.net/subscriptions?retryWrites=true&w=majority"
 
-# Microsoft Clarity Project ID
-NEXT_PUBLIC_CLARITY_PROJECT_ID=xxxxxxxxxx
+# Site URL
+NEXT_PUBLIC_SITE_URL="http://localhost:3000"
 
-# Other existing environment variables
-NEXT_PUBLIC_GOOGLE_SITE_VERIFICATION=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+# In production, this would typically be from a secure environment variable
+# For local development, you can use any string
+NEXTAUTH_SECRET="your-nextauth-secret-key-here"
