--- a/.env.local.example
+++ b/.env.local.example
@@ -1,6 +1,6 @@
 # Database URL for MongoDB
 # Ensure you're using the same MongoDB instance as your main application
-DATABASE_URL="mongodb+srv://<username>:<password>@<cluster>.mongodb.net/subscriptions?retryWrites=true&w=majority"
+MONGODB_URI="mongodb+srv://<username>:<password>@<cluster>.mongodb.net/subscriptions?retryWrites=true&w=majority"
 
 # Site URL
 NEXT_PUBLIC_SITE_URL="http://localhost:3000"
