--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.302.0",
+    "mongodb": "^5.7.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
