Update .env.example with authentication variables

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,10 @@
-# MongoDB Connection (Required for waitlist database)
+# MongoDB Connection (Required for waitlist and auth database)
 DATABASE_URL="mongodb+srv://username:password@your-cluster.mongodb.net/subscriptions-tracker?retryWrites=true&w=majority"
+
+# NextAuth Configuration (Required for authentication)
+NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_SECRET="generate-a-random-secret-key-here" # Run `openssl rand -base64 32` to generate
+ADMIN_SECRET_KEY="your-admin-creation-secret-key"   # Used for creating admin users via API
 
 # Admin API Key (for accessing protected endpoints like waitlist stats)
 ADMIN_API_KEY="your-secret-api-key"
