Update .env.example with auth variables

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,21 @@
-# MongoDB Connection (Required for waitlist database)
-DATABASE_URL="mongodb+srv://username:password@your-cluster.mongodb.net/subscriptions-tracker?retryWrites=true&w=majority"
+# Database URL for MongoDB
+DATABASE_URL="mongodb://localhost:27017/subscriptions-tracker-lp"
 
-# Admin API Key (for accessing protected endpoints like waitlist stats)
-ADMIN_API_KEY="your-secret-api-key"
+# Authentication
+NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_SECRET="your-random-secret-key-here"
 
-# Google Analytics 4 Measurement ID
-NEXT_PUBLIC_GA_MEASUREMENT_ID=G-XXXXXXXXXX
+# Google Analytics - optional
+NEXT_PUBLIC_GA_MEASUREMENT_ID="G-XXXXXXXXXX"
 
-# Microsoft Clarity Project ID
-NEXT_PUBLIC_CLARITY_PROJECT_ID=xxxxxxxxxx
+# Microsoft Clarity - optional
+NEXT_PUBLIC_CLARITY_PROJECT_ID="xxxxxxxx"
 
-# Google Site Verification
-NEXT_PUBLIC_GOOGLE_SITE_VERIFICATION=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+# Google Site Verification - optional
+NEXT_PUBLIC_GOOGLE_SITE_VERIFICATION="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
+
+# Base URL for canonical links
+NEXT_PUBLIC_BASE_URL="http://localhost:3000"
+
+# Environment type - development, staging, production
+NODE_ENV="development"
