--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "dotenv": "^16.4.7",
     "lucide-react": "^0.263.1",
     "mongodb": "^6.3.0",
     "next": "^14.1.0",
