Update .env.example with correct database path

--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,21 @@
-# MongoDB Connection (Required for waitlist and auth database)
-DATABASE_URL="mongodb+srv://username:password@your-cluster.mongodb.net/subscriptions-tracker?retryWrites=true&w=majority"
+# Database URL (use existing subscriptions database)
+DATABASE_URL="mongodb://localhost:27017/subscriptions"
 
-# NextAuth Configuration (Required for authentication)
+# Authentication
 NEXTAUTH_URL="http://localhost:3000"
-NEXTAUTH_SECRET="generate-a-random-secret-key-here" # Run `openssl rand -base64 32` to generate
-ADMIN_SECRET_KEY="your-admin-creation-secret-key"   # Used for creating admin users via API
+NEXTAUTH_SECRET="your-random-secret-key-here"
 
-# Admin API Key (for accessing protected endpoints like waitlist stats)
-ADMIN_API_KEY="your-secret-api-key"
+# Google Analytics - optional
+NEXT_PUBLIC_GA_MEASUREMENT_ID="G-XXXXXXXXXX"
 
-# Google Analytics 4 Measurement ID
-NEXT_PUBLIC_GA_MEASUREMENT_ID=G-XXXXXXXXXX
+# Microsoft Clarity - optional
+NEXT_PUBLIC_CLARITY_PROJECT_ID="xxxxxxxx"
 
-# Microsoft Clarity Project ID
-NEXT_PUBLIC_CLARITY_PROJECT_ID=xxxxxxxxxx
+# Google Site Verification - optional
+NEXT_PUBLIC_GOOGLE_SITE_VERIFICATION="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
 
-# Google Site Verification
-NEXT_PUBLIC_GOOGLE_SITE_VERIFICATION=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+# Base URL for canonical links
+NEXT_PUBLIC_BASE_URL="http://localhost:3000"
+
+# Environment type - development, staging, production
+NODE_ENV="development"
