--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,15 @@
-# MongoDB Connection (Required for waitlist and auth database)
-DATABASE_URL="mongodb+srv://username:password@your-cluster.mongodb.net/subscriptions-tracker?retryWrites=true&w=majority"
+# Database connection (use your existing database)
+DATABASE_URL="mongodb://localhost:27017/subscriptions"
 
-# NextAuth Configuration (Required for authentication)
+# Authentication - must be valid on the server-side
 NEXTAUTH_URL="http://localhost:3000"
-NEXTAUTH_SECRET="generate-a-random-secret-key-here" # Run `openssl rand -base64 32` to generate
-ADMIN_SECRET_KEY="your-admin-creation-secret-key"   # Used for creating admin users via API
+NEXTAUTH_SECRET="your-random-secret-key-here"
 
-# Admin API Key (for accessing protected endpoints like waitlist stats)
-ADMIN_API_KEY="your-secret-api-key"
+# Analytics - optional
+NEXT_PUBLIC_GA_MEASUREMENT_ID="G-XXXXXXXXXX"
+NEXT_PUBLIC_CLARITY_PROJECT_ID="xxxxxxxx"
+NEXT_PUBLIC_GOOGLE_SITE_VERIFICATION="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
+NEXT_PUBLIC_BASE_URL="http://localhost:3000"
 
-# Google Analytics 4 Measurement ID
-NEXT_PUBLIC_GA_MEASUREMENT_ID=G-XXXXXXXXXX
-
-# Microsoft Clarity Project ID
-NEXT_PUBLIC_CLARITY_PROJECT_ID=xxxxxxxxxx
-
-# Google Site Verification
-NEXT_PUBLIC_GOOGLE_SITE_VERIFICATION=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+# Environment type - development, staging, production
+NODE_ENV="development"
