Fix/real auth fix (#57)
* Add User model to Prisma schema for authentication

* Add next-auth and bcryptjs dependencies

* Add authentication types

* Add Prisma client singleton

* Add auth configuration

* Add auth validation utilities

* Add auth service with user management functions

* Add NextAuth configuration options

* Add auth index exports file

* Add NextAuth API route handler

* Add auth server actions for login and registration

* Add middleware for route protection

* Add login form component

* Add logout button component

* Add auth provider component for NextAuth client context

* Add user profile component for displaying user info

* Update root layout to include auth provider

* Add login page for admin access

* Add auth error page

* Add sign out page

* Update admin layout with auth components

* Add script for creating the first admin user

* Update package.json to add admin creation script

* Update .env.example with authentication variables

* Add documentation for authentication implementation

* Add protected waitlist admin API route

* Fix auth-options to use fallback secret and remove client-side env checks

* Update Prisma schema to map to existing users collection

* Update .env.example with better documentation

* tree

* Fix waitlist admin page stats initialization and error handling

* Fix waitlist admin API route to properly handle sessions and errors

* Fix waitlist service to improve error handling and type safety

* Fix admin layout to prevent overlap with main header

* Adjust admin page padding for consistency

* Adjust waitlist page padding for better spacing with admin navigation

* Fix SchemaOrg component to use deterministic IDs to avoid hydration issues

* Fix duplicate feature names in pricing configuration

* Remove duplicate header from LoginForm and update styling to match dark theme

* Update login page with consistent dark theme styling and add logo/back link

* Update auth error page with consistent dark theme sty

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,15 @@
-# MongoDB Connection (Required for waitlist database)
-DATABASE_URL="mongodb+srv://username:password@your-cluster.mongodb.net/subscriptions-tracker?retryWrites=true&w=majority"
+# Database connection (use your existing database)
+DATABASE_URL="mongodb://localhost:27017/subscriptions"
 
-# Admin API Key (for accessing protected endpoints like waitlist stats)
-ADMIN_API_KEY="your-secret-api-key"
+# Authentication - must be valid on the server-side
+NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_SECRET="your-random-secret-key-here"
 
-# Google Analytics 4 Measurement ID
-NEXT_PUBLIC_GA_MEASUREMENT_ID=G-XXXXXXXXXX
+# Analytics - optional
+NEXT_PUBLIC_GA_MEASUREMENT_ID="G-XXXXXXXXXX"
+NEXT_PUBLIC_CLARITY_PROJECT_ID="xxxxxxxx"
+NEXT_PUBLIC_GOOGLE_SITE_VERIFICATION="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
+NEXT_PUBLIC_BASE_URL="http://localhost:3000"
 
-# Microsoft Clarity Project ID
-NEXT_PUBLIC_CLARITY_PROJECT_ID=xxxxxxxxxx
-
-# Google Site Verification
-NEXT_PUBLIC_GOOGLE_SITE_VERIFICATION=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+# Environment type - development, staging, production
+NODE_ENV="development"
